# pupsiks-ukraine

./: .env.example  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.https.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  nginx.https.conf
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test
backend/src/: configs.rs  connections.rs  healthcheck.rs  main.rs
backend/src/api_v1/: code_confirmation.rs  create_cert.rs  delete_cert.rs  forgot_cert.rs  get_cert.rs  mod.rs  stats.rs
backend/src/api_v1/controllers/: code_confirmation.rs  create_cert.rs  delete_cert.rs  forgot_cert.rs  get_cert.rs  mod.rs  stats.rs
backend/src/api_v1/models/: cert.rs
backend/src/api_v1/repos/: cert.rs  mod.rs  redis.rs
backend/src/api_v1/services/: cache.rs  codes.rs  email.rs  mod.rs  rate_limits.rs
backend/src/api_v1/types/: errors.rs  mod.rs
backend/src/models/: cert.rs
backend/src/types/: errors.rs  mod.rs
backend/src/types/redis/: email_task.rs
backend/src/types/requests/: create_cert.rs  delete_cert.rs  forgot_cert.rs  mod.rs  send_code.rs
backend/src/types/responses/: bad_request.rs  certificate.rs  code_sent.rs  email_rate_limit.rs  internal_server_error.rs  ip_rate_limit.rs  mod.rs  not_found.rs  page_not_found.rs  resource_not_found.rs  users_count.rs
backend/src/utils/: code_generator.rs  code_validations.rs  email_code_verify.rs  log_error.rs  mod.rs  smart_trim.rs  uuid.rs
backend/tests/: Dockerfile  pyproject.toml
backend/tests/src/: cert_crud.py  configs.py  send_code.py  tests.py
email_worker/: .gitignore  (+3 more)
(+109 files in other folders)
