[package]
name = "backend"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
env_logger = "0.8"
log = "0.4"
derive_more = "2.0.1"
serde_json = "1.0.145"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid", "schema-sync" ] }
short-uuid = "0.2.0"
validator = { version = "0.20.0", features = ["derive"] }
fred = "10.1.0"
chrono = "0.4.42"
